  image. Added a "Tape management" menu with new options for tape rewinding
  and creating a blank CAS image. Added loading/saving of the currently
  attached tape image in the config file. Without the SIO patch, a user now
  must manually switch tape recording on/off if needed. Fixed some bugs and
  cleaned the code a bit.


2011-05-05  Petr Stehlik <pstehlik@sophics.cz>
* atari800.spec: David Bolt has provided an update that allows building
  the RPM packages for Fedora, CentOS, SUSE and Mandriva distributions.


2011-04-30  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* videomode.c: Fixed a bug with not allowing a VIDEOMODE_HOST_ASPECT_RATIO=0:0
  entry in the config file. Now when this value is encountered, the emulator
  performs aspect ratio autodetection.

* DOC/USAGE, atari800.man, atari.[ch], atari_curses.c, cfg.[ch], colours.c,
  input.c, ui.c, util.c, sdl/sound.c: Added support for automatic saving of
  configuration on emulator exit. (Had to move the System ROM Settings to
  a separate submenu in UI in order to make place for the new option.)
  Autosaving is performed only when a user closed the emulator, and not when
  the emulator closed itself eg. due to failure. For exiting an emulator due
  to error, a new function Atari800_ErrExit() is provided. This function works
  like Atari800_Exit but omits the autosaving.


** 2.2.1 released on 2011-04-28

2011-04-28  Petr Stehlik <pstehlik@sophics.cz>
* configure.ac: generalization for sound configuration

* ui.c, videomode.c, sdl/input.c: slight optimization for snprintf()

* monitor.c, rdevice.c, screen.[ch], sio.c, ui.c, ui_basic.c, util.c,
  videomode.c: replace unsafe sprintf() with snprintf()

* sdl/input.c: fix for over-optimized LPT TRIG, sprintf() removed

* README.1ST, atari800.spec, DOC/README, DOC/NEWS, atari.h, util/export:
  updated for a new release


2011-04-27  Petr Stehlik <pstehlik@sophics.cz>
* DOC/ChangeLog: blank lines added, "src/" from filenames removed
